# StegoXpress

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  StegoXpress.spec  docker-compose.yml  main.py  pyproject.toml  requirements.txt  steganography_app.py
.github/workflows/: tests.yml
core/: audio_engine.py  crypto_engine.py  file_packer.py  lsb_engine.py  png_chunk_engine.py  shamir_engine.py  shield_engine.py  vault_engine.py
docs/: LANDING_COPY.md  UPGRADE_NOTES.md
gui/: app.py  decode_tab.py  dnd.py  encode_tab.py  history_tab.py  send_tab.py  shield_tab.py  vault_tab.py  widgets.py
tests/: conftest.py  test_carriers.py  test_carriers_v2.py  test_production.py  test_roundtrip.py  test_seal.py  test_shamir.py  test_transport.py  test_upgrade.py  test_utils_cli.py  test_vault.py
transport/: email_sender.py  key_manager.py
utils/: config.py  history.py  logger.py
