[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegoxpress"
version = "2.0.0"
description = "Encrypted steganography toolkit: AES-256-GCM, hidden vaults, N-of-K secret sharing, and tamper-proof seals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "StegoXpress" }]
keywords = ["steganography", "encryption", "security", "lsb", "aes", "shamir"]
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "cryptography>=42.0",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/Nakum-hub/StegoXpress"
Issues = "https://github.com/Nakum-hub/StegoXpress/issues"

[tool.setuptools.packages.find]
include = ["core*", "transport*", "gui*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# S101: asserts are fine in tests; tests dir handled per-file below.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
