[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegoxpress"
version = "2.1.0"
description = "Encrypted steganography toolkit: AES-256-GCM, hidden vaults, N-of-K secret sharing, tamper-proof seals, GUI and full CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nakum-hub" }]
keywords = ["steganography", "encryption", "security", "lsb", "aes", "shamir", "privacy"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Graphics",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
]

# Core runtime deps — required for both CLI and GUI.
dependencies = [
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "cryptography>=42.0.0",
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.4.0",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
]

[project.scripts]
stegoxpress = "main:main"

[project.urls]
Homepage = "https://github.com/Nakum-hub/StegoXpress"
Issues = "https://github.com/Nakum-hub/StegoXpress/issues"

[tool.setuptools.packages.find]
include = ["core*", "transport*", "gui*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# gui/ requires a live display and has incomplete CustomTkinter / tkinterdnd2
# type stubs. Ignore errors from these modules in all mypy runs.
module = "gui.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["core", "transport", "utils"]
omit = ["tests/*", "gui/*"]
